# RAG-System

./: README.md  api.py  pyproject.toml
data/: quickstart.txt  sample.txt
db/: chroma.sqlite3
frontend/: package-lock.json  package.json  tsconfig.app.json  tsconfig.json
frontend/src/: App.tsx
src/: agent.py  evaluation.py  ingestion.py  main.py  retrieval_generation.py  retriever.py
